fixes issue with sponsor_logo height being too big, and should center the footer content

--- a/amp_conf/htdocs/admin/assets/css/mainstyle.css
+++ b/amp_conf/htdocs/admin/assets/css/mainstyle.css
@@ -49,7 +49,7 @@ body {
 #footer_content {
 	margin-left: auto;
 	margin-right: auto;
-	/*width: 550px;*/
+	width: 1000px;
 	text-align:left;
 }
 
@@ -78,6 +78,9 @@ padding-right: 3px;
 }
 #footer_content_sponsor {
 	margin-left:25px;
+}
+#footer_content_sponsor img {
+	height: 55px;
 }
 /***** info popups *****/
 a.info:link, a.info:hover {
